# cs702-lab

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.prism  README.md  _quarto.yml  index.qmd  main.py  pyproject.toml  run-prism.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish.yml  release.yml
exercise/: exercise6-2.qmd  exercise8-1.qmd
labs/: conversion.pctl  conversion.pm  prism-output.txt  week-02.qmd  week-03.qmd  week-04.qmd  week-05.qmd  week-06.qmd  week-07.qmd  week-08.qmd  week-09.qmd  week-10.qmd  week-11.qmd  week-12.qmd
labs/figures/: mdp-state-diagram-light.mmd  mdp-state-diagram.mmd  pctl-diagram.mmd  plate-diagram-q1-light.mmd  plate-diagram-q1.mmd
