[project]
name = "cs702-lab"
version = "0.1.0"
description = "CS702 Computational Interaction Lab Assignments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter",
    "pyyaml",
    "numpy",
    "matplotlib",
    "jax>=0.9.0",
    "numpyro>=0.19.0",
    "plotly>=6.5.2",
    "seaborn>=0.13.2",
    "pyomo>=6.9.5",
    "highspy>=1.13.1",
]
